--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Promise</title>
 </head>
-<ody>
+<body>
+    <div id="output"></div>
+    <script src="./script/script.js"></script>
     
-<script src="script.js"></script>
-</ody>
+</body>
 </html>
